# homelab-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.claude/: settings.local.json
crates/homelab-core/: Cargo.toml
crates/homelab-core/examples/: opnsense_leases.rs
crates/homelab-core/src/: client.rs  config.rs  lib.rs  utils.rs
crates/homelab-core/src/models/: opnsense.rs  proxmox.rs
crates/homelab-core/src/tools/: opnsense.rs  proxmox.rs
crates/homelab-core/tests/: client_integration_test.rs  config_test.rs
crates/homelab-discord/: Cargo.toml
crates/homelab-discord/src/: main.rs
crates/homelab-mcp/: Cargo.toml
crates/homelab-mcp/src/: main.rs
crates/homelab-ops/: Cargo.toml
crates/homelab-ops/src/: lib.rs
scripts/: run-homelab-mcp.ps1
