[package]
name = "homelab-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
rayon.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
reqwest.workspace = true
ipnet.workspace = true
derive_more.workspace = true
chrono.workspace = true
tracing.workspace = true
toml.workspace = true
humantime = "2.3.0"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["full"] }

